# IntentLoom

./: .gitignore  README.md  README.zh-CN.md  deploy.sh  index.html  package-lock.json  package.json  uno.config.ts  vite.config.ts
.github/workflows/: ci.yml
.playwright-cli/: page-2026-06-05T01-55-15-778Z.yml
docs/plan/: 2026-06-05-product-assessment.md  2026-06-06-e2e-runbook.md
docs/reviews/: full-audit-report-2026-06-10.md
src/: App.tsx  ReasonixApp.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  types.rs
src-tauri/src/agents/: claude.rs  codex.rs  config.rs  gemini.rs  hermes.rs  mod.rs  openclaw.rs  opencode.rs
src-tauri/src/commands/: acp.rs  agents.rs  ai.rs  experts.rs  fs.rs  mod.rs  permissions.rs  product_changes.rs  projects.rs  proxy.rs  sessions.rs  skills.rs
src-tauri/src/commands/skills/: local.rs  manager.rs  marketplace.rs  mod.rs  paths.rs  types.rs
src-tauri/src/utils/: path.rs
src/chat/: atFileQuery.ts  chatMessageJumpEvents.ts  conversationArtifact.tsx  conversationExport.ts  diffUtils.ts  fileMarker.ts  formatMessageTime.ts  getLastAssistantText.ts  messageHistory.ts  normalizeToolCall.ts
src/components/: LogPanel.tsx  Onboarding.tsx  Resizer.tsx  WelcomeView.tsx
src/composables/: types.ts
src/config/: cliPresets.ts  providerPresets.ts
src/hooks/: useAcpChat.ts  useAgentReadinessCheck.ts  useAutoScroll.ts  useAutoTitle.ts  useCompositionInput.ts  useMessageThrottle.ts  usePendingConfirmationsRecovery.ts  (+1 more)
(+149 files in other folders)
